# companys-vacancies-parser

./: .gitignore  README.md  main.py  pyproject.toml  queries.sql
utils/: api_hh.py  dbmanager.py  utils.py
